style.css
/*
Theme Name: Brutal Theme
Author: Endric
Version: 0.1
License: GNU General Public License v3 or later
License URI: http://www.gnu.org/licenses/gpl-3.0.html
Text Domain: brutaltheme
*/

:root {
  --link-color: rgb(194, 29, 0);
  --font-color: rgb(235, 47, 0);
  --max-content-width: 35rem;
}

* {
  font-size: 1.15rem;
  font-family: sans-serif;
  color: var(--font-color);
  text-align: right;
}

html,
body {
  margin: 0;
  padding: 0;
  border: 0;
  min-width: 100vw;
  min-height: 100vh;
}

a {
  color: var(--link-color);
}

p {
  display: inline;
  line-height: 150%;
}

.menu a,
h1 a,
h2 a,
.time_and_place a {
  text-decoration: none;
  color: var(--font-color);
}

#header {
  position: relative;
}

.current-menu-item {
  text-decoration: underline;
}

#main-column-wrapper {
  display: flex;
  justify-content: left;
  width: 100%;
}

#index-body > #main-column {
  margin-top: 66vh;
}

#main-column {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: var(--max-content-width);
}

#main-column img {
  width: 100%;
}

.time_and_place {
  font-weight: bold;
  white-space: pre-line;
}

.event-list {
  display: flex;
  flex-direction: column;
  list-style: none;
  margin: 0;
  padding: 0;
}

.menu {
  display: flex;
  align-content: center;
  justify-content: center;
  list-style: none;
  justify-content: space-evenly;
  margin: 3rem 0 3rem 0;
  padding: 0;
}

#canvas-div {
  position: fixed;
  top: 50%;
  left: 50%;
  height: 25vh;
  width: 25vh;
  translate: -50% -50%;
  background-color: var(--font-color);
  pointer-events: none;
  user-select: none;
}

#content {
  position: relative;
}

#title {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-content: center;
  justify-content: center;
  z-index: 5;
  pointer-events: none;
}

#title-logo {
  width: 35rem;
  max-width: 100%;
  max-height: 100%;
}

